fixed footer spacing, removed margins on assorted places and fixed spacing holes, footer name link to top, resized text to fit hierarchy and width

--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,15 @@ h5{
 	font-weight: 700;
 	margin: 0;
 }
+h6{
+	margin: 0;
+}
+p{
+	margin: 0;
+}
+ol{
+	margin: 0;
+}
 
 .bold{
 		font-weight: 700
@@ -197,9 +206,6 @@ header img{
 	width:6rem;
 	margin: auto;
 }
-
-
-
 
 
 
